# compilers-principles-examples

./: README.md
Compiler.Construction.Principles.And.Practice/: README.md
Essentials.Of.Compilation/code/: racket_interp_x86.py  utils.py
Flex.And.Bison/: README.md
Homemake.Programming.Languages/: README.md
Homemake.Scripting.Languages.In.Two.Weeks/: .gitignore  FAQ.md  README.md
Homemake.Scripting.Languages.In.Two.Weeks/backup_20250403/chap05/ply/: test.txt
Homemake.Scripting.Languages.In.Two.Weeks/backup_20250403/chap07-1/: README.md
Homemake.Scripting.Languages.In.Two.Weeks/backup_20250403/chap07-1/ply/: FuncParserRunner.py  InterpreterRunner.py  test_func2.txt
Homemake.Scripting.Languages.In.Two.Weeks/python/chap03/: LexerRunner.py  LexerTest.py
Homemake.Scripting.Languages.In.Two.Weeks/python/chap03/stone/: Lexer.py  ParseException.py  Token.py
Homemake.Scripting.Languages.In.Two.Weeks/python/chap05/: README.md
Homemake.Scripting.Languages.In.Two.Weeks/python/chap05/ply/: LexerRun.py  ParserRunner.py
Homemake.Scripting.Languages.In.Two.Weeks/python/chap06/: README.md
Homemake.Scripting.Languages.In.Two.Weeks/python/chap06/ply/: ParserRunner.py
Homemake.Scripting.Languages.In.Two.Weeks/python/chap07-1/ply/: FuncParserRunner.py  test_func1.txt
Homemake.Scripting.Languages.In.Two.Weeks/python/chap07/ply/: LexerRun.py
Homemake.Scripting.Languages.In.Two.Weeks/python/chap3/stone/: Lexer.py
Homemake.Scripting.Languages.In.Two.Weeks/python/chap5/stone/: Token.py
How.To.Develop.A.Compiler/: README.md
Language.Implementation.Patterns/: README.md
Language.Implementation.Patterns/code_from_book/cxx/: README.md
Language.Implementation.Patterns/code_from_book/cxx/IR/: README.md
Language.Implementation.Patterns/code_from_book/cxx/parsing/: README.md
Language.Implementation.Patterns/code_from_book/cxx/walking/: README.md
Language.Implementation.Patterns/cxx/ch02_basic_parsing_patterns/p02_lexer/: CMakeLists.txt
Language.Implementation.Patterns/cxx/ch02_basic_parsing_patterns/p02_lexer/run/: CMakeLists.txt  LexerRun.cpp  read_file.hpp
Language.Implementation.Patterns/cxx/ch02_basic_parsing_patterns/p02_lexer_2/: build_by_cmake.sh
Language.Implementation.Patterns/cxx/ch02_basic_parsing_patterns/p03_recursive_descent/: build_by_cmake.sh
Language.Implementation.Patterns/cxx/ch02_basic_parsing_patterns/p03_recursive_descent/test/: CMakeLists.txt  LexerTest.cpp  RecursiveDescentTest.cpp
Language.Implementation.Patterns/cxx/ch02_basic_parsing_patterns/p04_llk_recursive_descent/: CMakeLists.txt  build_by_cmake.sh
Language.Implementation.Patterns/cxx/ch03_enhanced_parsing_patterns/p05_backtracking/: CMakeLists.txt
Language.Implementation.Patterns/cxx/ch03_enhanced_parsing_patterns/p06_memoizing_parser/parser/: BacktrackParser.cpp  BacktrackParser.hpp  CMakeLists.txt  MismatchedTokenException.hpp  Parser.cpp  Parser.hpp  PreviousParseFailedException.hpp
Language.Implementation.Patterns/cxx/ch03_enhanced_parsing_patterns/p06_memoizing_parser/test/: CMakeLists.txt
Language.Implementation.Patterns/python/ch02_basic_parsing_patterns/p02_lexer/: Lexer.py  LexerRun.py  LexerTest.py  ListLexer.py  Token.py
Language.Implementation.Patterns/python/ch02_basic_parsing_patterns/p02_lexer_2/: Lexer.py  ListLexer.py  Token.py
Lex.And.Yacc/: README.md
Lex.And.Yacc/code/chapter-01/recipe-01/: Makefile  build.sh  test.sh
Lex.And.Yacc/code/chapter-01/recipe-02/: Makefile  build.sh  test.sh
Lex.And.Yacc/code/chapter-01/recipe-03/: Makefile  build.sh  ch1-03.l  test.sh
Lex.And.Yacc/code/chapter-01/recipe-04/: Makefile  build.sh  test.sh
Lex.And.Yacc/code/chapter-01/recipe-05/: Makefile  build.sh  ch1-05.l  ch1-05.y  clean.sh  test.sh
Lex.And.Yacc/code/chapter-01/recipe-06/: Makefile  build.sh  ch1-06.l  ch1-06.y  clean.sh  test.sh
Lex.And.Yacc/code/doc/: Lex与YACC详解 - 知乎.html
Lex.And.Yacc/code/doc/Lex与YACC详解 - 知乎_files/: column_002.js  column_003.css  column_003.js  column_004.js  column_005.js  column_006.js  column_007.js  column_008.js  column_009.js  column_010.js  column_011.js  column_012.js  column_013.js  column_014.js  column_015.js  column_016.js  column_017.js  column_018.js  hm.js
Lex.And.Yacc/code/samples/recipe-04/: build.sh  clean.sh  example4.l  test.sh
The.Definitive.ANTLR4.Reference/: README.md  build_antlr.sh
The.Definitive.ANTLR4.Reference/cxx/: README.md
The.Definitive.ANTLR4.Reference/cxx/listeners/Expr/: CMakeLists.txt  TestEvaluator.cpp  gen.sh  test.sh
The.Definitive.ANTLR4.Reference/cxx/listeners/LExpr/: TestLEvaluator.cpp  TestLEvaluatorWithProps.cpp  gen.sh  test.sh
The.Definitive.ANTLR4.Reference/cxx/listeners/PropertyFile/: CMakeLists.txt  TestPropertyFile.cpp  TestPropertyFileVisitor.cpp  gen.sh  test.sh
The.Definitive.ANTLR4.Reference/cxx/starter/: ArrayInitBaseListener.cpp  ArrayInitLexer.h  ArrayInitParser.h  CMakeLists.txt  ShortToUnicodeString.h  Translate.cpp  gen.sh
The.Definitive.ANTLR4.Reference/cxx/starter/ArrayInit/: CMakeLists.txt  Makefile  Test.cpp  Translate.cpp  build_by_cmake.sh  test.sh
The.Definitive.ANTLR4.Reference/cxx/tour/Expr/: CMakeLists.txt  ExprJoyRide.cpp  gen.sh  test.sh
The.Definitive.ANTLR4.Reference/cxx/tour/Java/: CMakeLists.txt  ExtractInterfaceListener.h  gen.sh  (+6 more)
Two.Weeks.Of.Homemade.Scripting.Language/: README.md
Two.Weeks.Of.Homemade.Scripting.Language/python/chap3/: test.txt
(+242 files in other folders)
